# Voice-AI-Agent-Lead-Qualification-Google-Form-

./: .env  README.md
.github/workflows/: inngest-server.yml  livekit-agent.yml
Google-Apps-Script/: google-form-to-lk-call.js  transcribed-call-to-gsheets.js
inngest-server/: Dockerfile  pyproject.toml  requirements.txt
inngest-server/app/: main.py
livekit-voice-agent/: Dockerfile  agent.py  pyproject.toml  requirements.txt  utils.py
livekit-voice-agent/prompts/: agent_instructions.yaml
