[project]
name = "inngest-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.2",
    "inngest>=0.5.15",
    "livekit-agents>=1.3.12",
    "pydantic-ai>=1.56.0",
    "python-dotenv>=1.2.1",
]
